tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-type-missing-colon/expected.err
Error: invalid syntax: expected ':', ',', newline, something else, or ']', found identifier 'word'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-type-missing-colon/input.k65:2:10 ]
   │
 2 │     .a[2]word
   │          ──┬─  
   │            ╰─── inside symbolic-subscript field list
   │ 
   │ Help: each entry inside `var NAME [ ... ]` is `.field` (optional `:byte`/`:word`/`:far`) (optional `[count]`); separate entries with `,` or a newline; field-list entries must lead with a dot
   │ 
   │ Note: Symbolic-subscript field lists declare named offsets inside a var's address window. The grammar is: `[ .field0:type0[count0], .field1:type1, ... ]`. Only `byte`, `word`, and `far` are accepted as the type tag, and explicit typed counts put the type before `[count]`.
───╯
